# rust-usecases

./: .env.example  .gitignore  Cargo.toml  README.md  dev.sh  docker-compose.yml  env.example  start_server.sh
.guide/: response_routes.md  sqlx_queries.md
.insomnia/: Insomnia_2025-06-09.yaml  Insomnia_2025-06-10.yaml  Insomnia_2025-06-11.yaml  Insomnia_2025-06-13.yaml  Insomnia_2025-06-24.yaml
migrations/: 20250607183749_create_users.sql  20250608143748_alter_users.sql  20250608143753_create_profiles.sql  20250608144929_update_user_timestamps.sql  20250610162144_alter_user_add_soft_delete.sql  20250611173805_create_tokens.sql  20250612165442_create_courses.sql  20250615161149_create_notifications.sql  20250617151731_add_obj_code_type_enum.sql  20250617152103_change_obj_code_to_enum.sql  20250623161432_create_categories_table.sql  20250624170908_create_course_category.sql
src/: cli.rs  cli_init.rs  lib.rs  macros.rs  main.rs  server.rs
src/commands/: migrate.rs  mod.rs  sync_courses.rs
src/config/: app_state.rs  init_settings.rs  mod.rs  settings.rs
src/db/: elasticsearch.rs  mod.rs  mongo.rs  test_db.rs
src/errors/: app_error.rs
src/extensions/: has_any_field.rs  mod.rs  request_user_ext.rs
src/logs/: mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/middleware/: auth_middleware.rs  mod.rs
src/models/: auth.rs  category.rs  course.rs  mod.rs  notification.rs  profile.rs  token.rs  user.rs  user_request.rs  user_response.rs
src/repositories/: category_repository.rs  course_repository.rs  mod.rs  notification_repository.rs  profile_repository.rs  token_repository.rs  user_repository.rs
src/routes/: auth_routes.rs  category_routes.rs  (+8 more)
tests/: api_courses.rs  api_users.rs
(+20 files in other folders)
