[package]
name = "rust-usecases"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15" 
bcrypt = "0.15"
jsonwebtoken = "9"
futures = "0.3"
derive_more = "0.99"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
